[package]
name = "girack-backend"
version = "0.1.0"
authors = ["higashi000 <higashi.ict@gmail.com>",
           "itok01 <contact@itok01.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1"
actix-web = "3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
env_logger = "0.7"
htmlescape = "0.3"
serde = "1.0"
tokio = { version = "0.2", features = ["macros"] }
tokio-postgres = { version = "0.5", features = ["with-chrono-0_4"] }
